--- a/app/src/main/res/layout/btn_view.xml
+++ b/app/src/main/res/layout/btn_view.xml
@@ -8,6 +8,7 @@
         android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:text="New" />
 
 </LinearLayout>
